# humlex

./: .gitignore  AGENTS.md  AI_ChatApp.swift  AppTheme.swift  ChatComposerView.swift  ContentView.swift  KeychainStore.swift  LICENSE  LLMAdapter.swift  MarkdownView.swift  MessageRow.swift  Models.swift  Package.resolved  Package.swift  ProviderIcon.swift  README.md  SettingsView.swift  ToastManager.swift  build-dmg.sh  design.md  dev.sh  justfile  run.sh  skills.sh  theme.schema.json
.github/: FUNDING.yml
.zed/: tasks.json
Models/: AgentTools.swift  ChatModels.swift  CodexAvailability.swift  LLMModels.swift
Networking/: AnthropicAdapter.swift  ClaudeCodeAdapter.swift  GeminiAdapter.swift  KimiAdapter.swift  LLMProviderAdapter.swift  MCPManager.swift  NvmPathDetector.swift  OpenAIAdapter.swift  OpenAICodexAdapter.swift  OpenRouterAdapter.swift  VercelAIAdapter.swift
Persistence/: ChatPersistence.swift  KeychainStore.swift
Theme/: SyntaxHighlighter.swift
Tools/: BuiltInTool.swift  BuiltInToolRegistry.swift  FetchTool.swift  FileSystemTools.swift
Utilities/: AppUpdater.swift  TokenEstimator.swift
Views/: AppStatusBarView.swift  ChatComposerView.swift  ChatSidebar.swift  ContentView.swift  ContextUsageIndicator.swift  DebugPerformanceBanner.swift  (+6 more)
gateway/: Cargo.toml  docs.md  railway.json
gateway/src/: auth.rs  config.rs  error.rs  main.rs
gateway/src/http/: handlers.rs  mod.rs  playground.rs  responses.rs  state.rs
gateway/src/providers/: registry.rs
gateway/src/sdk/: anthropic.rs  azure_openai.rs  gemini.rs  kimi.rs  mod.rs  openai.rs  retry.rs
(+50 files in other folders)
